--- a/docs/styles.css
+++ b/docs/styles.css
@@ -17,12 +17,12 @@ body {
 }
 
 .sidebar {
-  background-color: #006779; /* Deep teal */
+  background-color: #006F79; /* Deep teal */
   color: white;
 }
 
 .sidebar a {
-  color: #ffffff;
+  color: #black;
   text-decoration: none;
 }
 
@@ -38,7 +38,7 @@ body {
 
 .sidebar {
   padding: 1rem;
-  border-right: 2px solid #004d5a;
+  border-right: 2px solid #006F79;
 }
 
 
