--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,3 +1,16 @@
+.banner-container {
+  width: 100vw;              /* Full viewport width */
+  position: relative;
+  left: 50%;                 /* Position from center */
+  right: 50%;
+  margin-left: -50vw;        /* Pull to left edge */
+  margin-right: -50vw;       /* Pull to right edge */
+  margin-top: -1rem;         /* Pull to very top */
+  margin-bottom: 2rem;
+  overflow: hidden;
+  padding: 0;
+}
+
 .calendar-table {
   font-size: 0.8em;
   width: 60%;
